[package]
name = "entangled"
version = "0.1.0"
edition = "2024"

[lib]
name = "entangled_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bins/server.rs"

[[bin]]
name = "client"
path = "src/bins/client.rs"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
hostname = "0.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

